--- a/data/sources/webexpo.yaml
+++ b/data/sources/webexpo.yaml
@@ -2523,6 +2523,9 @@ series:
           WebExpo is Central Europe''s largest conference covering deep tech & practical topics for developers, UX professionals & researchers, product managers,...
 
 
+          Price: 424.00 EUR
+
+
           https://www.meetup.com/webexpo/events/285984047/'
         location: Palace Lucerna (Vodičkova 704/36, Nové Město, Praha-Praha 1, Czech Republic 110 00)
         geo:
